# kolibri-explore-plugin

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc.js  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  lerna.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: channel-custom-presentation-request.md
.github/workflows/: bump2release.yml  docker.yml  lint.yml  main.yml  node.yml  python.yml  release-apps.yml  release.yml  whl.yml
dependency-stub/: package.json
docker/: Dockerfile  Dockerfile-master  README.md  build-plugin.sh  docker-compose.yml  entrypoint.sh  nginx.conf  uwsgi.ini
docs/: i18n.md  template-spec.md  template-tech-info.md
kolibri_explore_plugin/: VERSION  __init__.py  api_urls.py  app.py  apps_config.py  buildConfig.js  collectionviews.py  jobs.py  kolibri_plugin.py  matomo.js  middleware.py  models.py  options.py  settings.py  tasks.py  urls.py  views.py  viewsets.py
kolibri_explore_plugin/apps/pbskids/: metadata.json
kolibri_explore_plugin/apps/sikana/: metadata.json
kolibri_explore_plugin/assets/: package.json
kolibri_explore_plugin/assets/src/: apiResources.js  app.js  bootswatch.scss  chromeos-demo.json  constants.js  contentDownloadPlugin.js  customApps.js  intl-locale-data.js  kolibriApi.js  searchApi.js  styles.scss  variables.scss  vue-intl-locale-data.js
kolibri_explore_plugin/assets/src/components/: AboutFooter.vue  AboutModal.vue  AlphabeticalChannelsList.vue  Carousel.vue  CategorizedChannelsList.vue  CategorizedList.vue  ChannelsList.vue  CollectionSelectionModal.vue  ContentProvidersRow.vue  DiscoveryNavBar.vue  DownloadTestModal.vue  EkIguanaList.vue  Footer.vue  GradeSelectionModal.vue  Header.vue  InstallContentModal.vue  ManuqModal.vue  TagRow.vue
kolibri_explore_plugin/assets/src/mixins/: isOfflineMixin.js  navigationMixin.js
kolibri_explore_plugin/assets/src/modules/: pluginModule.js
kolibri_explore_plugin/assets/src/routes/: baseRoutes.js  index.js
kolibri_explore_plugin/assets/src/views/: AboutModal.vue  Base.vue  ChannelCard.vue  ChannelCardGroupGrid.vue  ChannelsPage.vue  ContentCardGroupGrid.vue  ContentItem.vue  ContentLightbox.vue  ContentModal.vue  ContentPage.vue  ContentUnavailablePage.vue  CustomChannelPresentationApp.vue  CustomChannelsPage.vue  DemoIndex.vue  DevTag.vue  DiscoveryFooter.vue  DiscoveryPage.vue  DiscoveryPageCollections.vue  DiscoveryPageContenPacks.vue  DiscoveryPageEkIguana.vue  DiscoveryPageFullContent.vue  DownloadPage.vue  ExploreIndex.vue  ExploreSideNavEntry.js  ExploreSideNavEntry.vue  PageHeader.vue  SearchPage.vue  TopicsPage.vue  commonExploreStrings.js
kolibri_explore_plugin/locale/: README.md  language_info.json
kolibri_explore_plugin/locale/ar/LC_MESSAGES/: django.mo  django.po
kolibri_explore_plugin/locale/de/LC_MESSAGES/: django.mo
kolibri_explore_plugin/locale/el/LC_MESSAGES/: django.po
kolibri_explore_plugin/locale/en/LC_MESSAGES/: django.po  ek-components-messages.json  kolibri_explore_plugin.app-messages.json  kolibri_explore_plugin.side_nav-messages.json  template-ui-messages.json  welcome-screen-messages.json
kolibri_explore_plugin/locale/es_419/LC_MESSAGES/: django.mo  ek-components-messages.json  kolibri_explore_plugin.app-messages.json  kolibri_explore_plugin.side_nav-messages.json  template-ui-messages.json  welcome-screen-messages.json
kolibri_explore_plugin/locale/es_ES/LC_MESSAGES/: django.po  ek-components-messages.json  kolibri_explore_plugin.app-messages.json  kolibri_explore_plugin.side_nav-messages.json  template-ui-messages.json
kolibri_explore_plugin/locale/ha/LC_MESSAGES/: django.mo
kolibri_explore_plugin/locale/hi_IN/LC_MESSAGES/: django.po
kolibri_explore_plugin/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
kolibri_explore_plugin/management/commands/: applyexternaltags.py
kolibri_explore_plugin/migrations/: 0001_initial.py  0002_backgroundtask.py  0003_collectionstate.py
kolibri_explore_plugin/static/: highlighted-content.json
kolibri_explore_plugin/templates/explore/: explore.html
kolibri_explore_plugin/test/: README.md  conftest.py  plugin.py  settings.py  test_collectionviews.py  test_jobs.py  test_migrations.py  test_models.py  utils.py
kolibri_explore_plugin/test/channels/: README.md  db.json.template
kolibri_explore_plugin/test/collections/: README.md  artist-0001.json  athlete-0001.json  curious-0001.json  explorer-0001.json  extras-0001.json  inventor-0001.json  pack.json.template  scientist-0001.json  spanish-0001.json  spanish-extras-0001.json
requirements/: test.txt
scripts/: _common.py  bootstrap.sh  build_info.sh  build_template_overrides.py  bump_version.py  bundle_bundles.py  bundle_zip.py  check_can_relese.sh  clean.sh  clear_override.py  copy_bundles.py  create_channeldb_json.py  create_collection_pack.py  create_contentdir.py  create_mock_nodes.py  ensure_override.py  import_translation.py  ingest_highlighted.py  review_highlighted.py  set_override.py  trigger_jenkins.py
(+26 files in other folders)
